include/codata_constants_2018.h

ADD_IMPORT extern const double ELECTRON_RELATIVE_ATOMIC_MASS;/**<  */
ADD_IMPORT extern const double U_ELECTRON_RELATIVE_ATOMIC_MASS;/**<  */
ADD_IMPORT extern const double ELECTRON_TAU_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_ELECTRON_TAU_MASS_RATIO;/**<  */
ADD_IMPORT extern const double ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO;/**<  */
ADD_IMPORT extern const double ELECTRON_TO_SHIELDED_HELION_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double U_ELECTRON_TO_SHIELDED_HELION_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double ELECTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double U_ELECTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double ELECTRON_TRITON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_ELECTRON_TRITON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double ELECTRON_VOLT;/**< J */
ADD_IMPORT extern const double U_ELECTRON_VOLT;/**< J */
ADD_IMPORT extern const double ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double U_ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double ELECTRON_VOLT_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double U_ELECTRON_VOLT_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double ELECTRON_VOLT_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double U_ELECTRON_VOLT_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double U_ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double ELECTRON_VOLT_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double U_ELECTRON_VOLT_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double ELECTRON_VOLT_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double U_ELECTRON_VOLT_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double ELECTRON_VOLT_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double U_ELECTRON_VOLT_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double ELEMENTARY_CHARGE;/**< C */
ADD_IMPORT extern const double U_ELEMENTARY_CHARGE;/**< C */
ADD_IMPORT extern const double ELEMENTARY_CHARGE_OVER_H_BAR;/**< A J^-1 */
ADD_IMPORT extern const double U_ELEMENTARY_CHARGE_OVER_H_BAR;/**< A J^-1 */
ADD_IMPORT extern const double FARADAY_CONSTANT;/**< C mol^-1 */
ADD_IMPORT extern const double U_FARADAY_CONSTANT;/**< C mol^-1 */
ADD_IMPORT extern const double FERMI_COUPLING_CONSTANT;/**< GeV^-2 */
ADD_IMPORT extern const double U_FERMI_COUPLING_CONSTANT;/**< GeV^-2 */
ADD_IMPORT extern const double FINE_STRUCTURE_CONSTANT;/**<  */
ADD_IMPORT extern const double U_FINE_STRUCTURE_CONSTANT;/**<  */
ADD_IMPORT extern const double FIRST_RADIATION_CONSTANT;/**< W m^2 */
ADD_IMPORT extern const double U_FIRST_RADIATION_CONSTANT;/**< W m^2 */
ADD_IMPORT extern const double FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE;/**< W m^2 sr^-1 */
ADD_IMPORT extern const double U_FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE;/**< W m^2 sr^-1 */
ADD_IMPORT extern const double HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double U_HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double HARTREE_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double U_HARTREE_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double HARTREE_ENERGY;/**< J */
ADD_IMPORT extern const double U_HARTREE_ENERGY;/**< J */
ADD_IMPORT extern const double HARTREE_ENERGY_IN_EV;/**< eV */
ADD_IMPORT extern const double U_HARTREE_ENERGY_IN_EV;/**< eV */
ADD_IMPORT extern const double HARTREE_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double U_HARTREE_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double HARTREE_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double U_HARTREE_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double HARTREE_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double U_HARTREE_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double HARTREE_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double U_HARTREE_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double HARTREE_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double U_HARTREE_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double HELION_ELECTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_HELION_ELECTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double HELION_G_FACTOR;/**<  */
ADD_IMPORT extern const double U_HELION_G_FACTOR;/**<  */
ADD_IMPORT extern const double HELION_MAG__MOM;/**< J T^-1 */
ADD_IMPORT extern const double U_HELION_MAG__MOM;/**< J T^-1 */
ADD_IMPORT extern const double HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double U_HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double U_HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double HELION_MASS;/**< kg */
ADD_IMPORT extern const double U_HELION_MASS;/**< kg */
ADD_IMPORT extern const double HELION_MASS_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double U_HELION_MASS_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double HELION_MASS_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double U_HELION_MASS_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double HELION_MASS_IN_U;/**< u */
ADD_IMPORT extern const double U_HELION_MASS_IN_U;/**< u */
ADD_IMPORT extern const double HELION_MOLAR_MASS;/**< kg mol^-1 */
ADD_IMPORT extern const double U_HELION_MOLAR_MASS;/**< kg mol^-1 */
ADD_IMPORT extern const double HELION_PROTON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_HELION_PROTON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double HELION_RELATIVE_ATOMIC_MASS;/**<  */
ADD_IMPORT extern const double U_HELION_RELATIVE_ATOMIC_MASS;/**<  */
ADD_IMPORT extern const double HELION_SHIELDING_SHIFT;/**<  */
ADD_IMPORT extern const double U_HELION_SHIELDING_SHIFT;/**<  */
ADD_IMPORT extern const double HERTZ_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double U_HERTZ_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double HERTZ_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double U_HERTZ_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double HERTZ_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double U_HERTZ_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double HERTZ_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double U_HERTZ_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double HERTZ_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double U_HERTZ_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double HERTZ_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double U_HERTZ_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double HERTZ_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double U_HERTZ_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double HYPERFINE_TRANSITION_FREQUENCY_OF_CS_133;/**< Hz */
ADD_IMPORT extern const double U_HYPERFINE_TRANSITION_FREQUENCY_OF_CS_133;/**< Hz */
ADD_IMPORT extern const double INVERSE_FINE_STRUCTURE_CONSTANT;/**<  */
ADD_IMPORT extern const double U_INVERSE_FINE_STRUCTURE_CONSTANT;/**<  */