src/codata_.f90


real(c_double), protected, bind(C,name="ELECTRON_RELATIVE_ATOMIC_MASS") :: &
ELECTRON_RELATIVE_ATOMIC_MASS= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_RELATIVE_ATOMIC_MASS") :: &
U_ELECTRON_RELATIVE_ATOMIC_MASS= !! 

real(c_double), protected, bind(C,name="ELECTRON_TAU_MASS_RATIO") :: &
ELECTRON_TAU_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_TAU_MASS_RATIO") :: &
U_ELECTRON_TAU_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO") :: &
ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO") :: &
U_ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="ELECTRON_TO_SHIELDED_HELION_MAG__MOM__RATIO") :: &
ELECTRON_TO_SHIELDED_HELION_MAG__MOM__RATIO= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_TO_SHIELDED_HELION_MAG__MOM__RATIO") :: &
U_ELECTRON_TO_SHIELDED_HELION_MAG__MOM__RATIO= !! 

real(c_double), protected, bind(C,name="ELECTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO") :: &
ELECTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO") :: &
U_ELECTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO= !! 

real(c_double), protected, bind(C,name="ELECTRON_TRITON_MASS_RATIO") :: &
ELECTRON_TRITON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_TRITON_MASS_RATIO") :: &
U_ELECTRON_TRITON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="ELECTRON_VOLT") :: &
ELECTRON_VOLT= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_VOLT") :: &
U_ELECTRON_VOLT= !! 

real(c_double), protected, bind(C,name="ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP") :: &
ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP") :: &
U_ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="ELECTRON_VOLT_HARTREE_RELATIONSHIP") :: &
ELECTRON_VOLT_HARTREE_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_VOLT_HARTREE_RELATIONSHIP") :: &
U_ELECTRON_VOLT_HARTREE_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="ELECTRON_VOLT_HERTZ_RELATIONSHIP") :: &
ELECTRON_VOLT_HERTZ_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_VOLT_HERTZ_RELATIONSHIP") :: &
U_ELECTRON_VOLT_HERTZ_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP") :: &
ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP") :: &
U_ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="ELECTRON_VOLT_JOULE_RELATIONSHIP") :: &
ELECTRON_VOLT_JOULE_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_VOLT_JOULE_RELATIONSHIP") :: &
U_ELECTRON_VOLT_JOULE_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="ELECTRON_VOLT_KELVIN_RELATIONSHIP") :: &
ELECTRON_VOLT_KELVIN_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_VOLT_KELVIN_RELATIONSHIP") :: &
U_ELECTRON_VOLT_KELVIN_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="ELECTRON_VOLT_KILOGRAM_RELATIONSHIP") :: &
ELECTRON_VOLT_KILOGRAM_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_VOLT_KILOGRAM_RELATIONSHIP") :: &
U_ELECTRON_VOLT_KILOGRAM_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="ELEMENTARY_CHARGE") :: &
ELEMENTARY_CHARGE= !! 
real(c_double), protected, bind(C,name="U_ELEMENTARY_CHARGE") :: &
U_ELEMENTARY_CHARGE= !! 

real(c_double), protected, bind(C,name="ELEMENTARY_CHARGE_OVER_H_BAR") :: &
ELEMENTARY_CHARGE_OVER_H_BAR= !! 
real(c_double), protected, bind(C,name="U_ELEMENTARY_CHARGE_OVER_H_BAR") :: &
U_ELEMENTARY_CHARGE_OVER_H_BAR= !! 

real(c_double), protected, bind(C,name="FARADAY_CONSTANT") :: &
FARADAY_CONSTANT= !! 
real(c_double), protected, bind(C,name="U_FARADAY_CONSTANT") :: &
U_FARADAY_CONSTANT= !! 

real(c_double), protected, bind(C,name="FERMI_COUPLING_CONSTANT") :: &
FERMI_COUPLING_CONSTANT= !! 
real(c_double), protected, bind(C,name="U_FERMI_COUPLING_CONSTANT") :: &
U_FERMI_COUPLING_CONSTANT= !! 

real(c_double), protected, bind(C,name="FINE_STRUCTURE_CONSTANT") :: &
FINE_STRUCTURE_CONSTANT= !! 
real(c_double), protected, bind(C,name="U_FINE_STRUCTURE_CONSTANT") :: &
U_FINE_STRUCTURE_CONSTANT= !! 

real(c_double), protected, bind(C,name="FIRST_RADIATION_CONSTANT") :: &
FIRST_RADIATION_CONSTANT= !! 
real(c_double), protected, bind(C,name="U_FIRST_RADIATION_CONSTANT") :: &
U_FIRST_RADIATION_CONSTANT= !! 

real(c_double), protected, bind(C,name="FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE") :: &
FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE= !! 
real(c_double), protected, bind(C,name="U_FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE") :: &
U_FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE= !! 

real(c_double), protected, bind(C,name="HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP") :: &
HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP") :: &
U_HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="HARTREE_ELECTRON_VOLT_RELATIONSHIP") :: &
HARTREE_ELECTRON_VOLT_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_HARTREE_ELECTRON_VOLT_RELATIONSHIP") :: &
U_HARTREE_ELECTRON_VOLT_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="HARTREE_ENERGY") :: &
HARTREE_ENERGY= !! 
real(c_double), protected, bind(C,name="U_HARTREE_ENERGY") :: &
U_HARTREE_ENERGY= !! 

real(c_double), protected, bind(C,name="HARTREE_ENERGY_IN_EV") :: &
HARTREE_ENERGY_IN_EV= !! 
real(c_double), protected, bind(C,name="U_HARTREE_ENERGY_IN_EV") :: &
U_HARTREE_ENERGY_IN_EV= !! 

real(c_double), protected, bind(C,name="HARTREE_HERTZ_RELATIONSHIP") :: &
HARTREE_HERTZ_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_HARTREE_HERTZ_RELATIONSHIP") :: &
U_HARTREE_HERTZ_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="HARTREE_INVERSE_METER_RELATIONSHIP") :: &
HARTREE_INVERSE_METER_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_HARTREE_INVERSE_METER_RELATIONSHIP") :: &
U_HARTREE_INVERSE_METER_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="HARTREE_JOULE_RELATIONSHIP") :: &
HARTREE_JOULE_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_HARTREE_JOULE_RELATIONSHIP") :: &
U_HARTREE_JOULE_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="HARTREE_KELVIN_RELATIONSHIP") :: &
HARTREE_KELVIN_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_HARTREE_KELVIN_RELATIONSHIP") :: &
U_HARTREE_KELVIN_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="HARTREE_KILOGRAM_RELATIONSHIP") :: &
HARTREE_KILOGRAM_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_HARTREE_KILOGRAM_RELATIONSHIP") :: &
U_HARTREE_KILOGRAM_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="HELION_ELECTRON_MASS_RATIO") :: &
HELION_ELECTRON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_HELION_ELECTRON_MASS_RATIO") :: &
U_HELION_ELECTRON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="HELION_G_FACTOR") :: &
HELION_G_FACTOR= !! 
real(c_double), protected, bind(C,name="U_HELION_G_FACTOR") :: &
U_HELION_G_FACTOR= !! 

real(c_double), protected, bind(C,name="HELION_MAG__MOM") :: &
HELION_MAG__MOM= !! 
real(c_double), protected, bind(C,name="U_HELION_MAG__MOM") :: &
U_HELION_MAG__MOM= !! 

real(c_double), protected, bind(C,name="HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO") :: &
HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO= !! 
real(c_double), protected, bind(C,name="U_HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO") :: &
U_HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO= !! 

real(c_double), protected, bind(C,name="HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO") :: &
HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO= !! 
real(c_double), protected, bind(C,name="U_HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO") :: &
U_HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO= !! 

real(c_double), protected, bind(C,name="HELION_MASS") :: &
HELION_MASS= !! 
real(c_double), protected, bind(C,name="U_HELION_MASS") :: &
U_HELION_MASS= !! 

real(c_double), protected, bind(C,name="HELION_MASS_ENERGY_EQUIVALENT") :: &
HELION_MASS_ENERGY_EQUIVALENT= !! 
real(c_double), protected, bind(C,name="U_HELION_MASS_ENERGY_EQUIVALENT") :: &
U_HELION_MASS_ENERGY_EQUIVALENT= !! 

real(c_double), protected, bind(C,name="HELION_MASS_ENERGY_EQUIVALENT_IN_MEV") :: &
HELION_MASS_ENERGY_EQUIVALENT_IN_MEV= !! 
real(c_double), protected, bind(C,name="U_HELION_MASS_ENERGY_EQUIVALENT_IN_MEV") :: &
U_HELION_MASS_ENERGY_EQUIVALENT_IN_MEV= !! 

real(c_double), protected, bind(C,name="HELION_MASS_IN_U") :: &
HELION_MASS_IN_U= !! 
real(c_double), protected, bind(C,name="U_HELION_MASS_IN_U") :: &
U_HELION_MASS_IN_U= !! 

real(c_double), protected, bind(C,name="HELION_MOLAR_MASS") :: &
HELION_MOLAR_MASS= !! 
real(c_double), protected, bind(C,name="U_HELION_MOLAR_MASS") :: &
U_HELION_MOLAR_MASS= !! 

real(c_double), protected, bind(C,name="HELION_PROTON_MASS_RATIO") :: &
HELION_PROTON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_HELION_PROTON_MASS_RATIO") :: &
U_HELION_PROTON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="HELION_RELATIVE_ATOMIC_MASS") :: &
HELION_RELATIVE_ATOMIC_MASS= !! 
real(c_double), protected, bind(C,name="U_HELION_RELATIVE_ATOMIC_MASS") :: &
U_HELION_RELATIVE_ATOMIC_MASS= !! 

real(c_double), protected, bind(C,name="HELION_SHIELDING_SHIFT") :: &
HELION_SHIELDING_SHIFT= !! 
real(c_double), protected, bind(C,name="U_HELION_SHIELDING_SHIFT") :: &
U_HELION_SHIELDING_SHIFT= !! 

real(c_double), protected, bind(C,name="HERTZ_ATOMIC_MASS_UNIT_RELATIONSHIP") :: &
HERTZ_ATOMIC_MASS_UNIT_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_HERTZ_ATOMIC_MASS_UNIT_RELATIONSHIP") :: &
U_HERTZ_ATOMIC_MASS_UNIT_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="HERTZ_ELECTRON_VOLT_RELATIONSHIP") :: &
HERTZ_ELECTRON_VOLT_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_HERTZ_ELECTRON_VOLT_RELATIONSHIP") :: &
U_HERTZ_ELECTRON_VOLT_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="HERTZ_HARTREE_RELATIONSHIP") :: &
HERTZ_HARTREE_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_HERTZ_HARTREE_RELATIONSHIP") :: &
U_HERTZ_HARTREE_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="HERTZ_INVERSE_METER_RELATIONSHIP") :: &
HERTZ_INVERSE_METER_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_HERTZ_INVERSE_METER_RELATIONSHIP") :: &
U_HERTZ_INVERSE_METER_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="HERTZ_JOULE_RELATIONSHIP") :: &
HERTZ_JOULE_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_HERTZ_JOULE_RELATIONSHIP") :: &
U_HERTZ_JOULE_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="HERTZ_KELVIN_RELATIONSHIP") :: &
HERTZ_KELVIN_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_HERTZ_KELVIN_RELATIONSHIP") :: &
U_HERTZ_KELVIN_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="HERTZ_KILOGRAM_RELATIONSHIP") :: &
HERTZ_KILOGRAM_RELATIONSHIP= !! 
real(c_double), protected, bind(C,name="U_HERTZ_KILOGRAM_RELATIONSHIP") :: &
U_HERTZ_KILOGRAM_RELATIONSHIP= !! 

real(c_double), protected, bind(C,name="HYPERFINE_TRANSITION_FREQUENCY_OF_CS_133") :: &
HYPERFINE_TRANSITION_FREQUENCY_OF_CS_133= !! 
real(c_double), protected, bind(C,name="U_HYPERFINE_TRANSITION_FREQUENCY_OF_CS_133") :: &
U_HYPERFINE_TRANSITION_FREQUENCY_OF_CS_133= !! 

real(c_double), protected, bind(C,name="INVERSE_FINE_STRUCTURE_CONSTANT") :: &
INVERSE_FINE_STRUCTURE_CONSTANT= !! 
real(c_double), protected, bind(C,name="U_INVERSE_FINE_STRUCTURE_CONSTANT") :: &
U_INVERSE_FINE_STRUCTURE_CONSTANT= !! 
